# GameOfLifeGPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
res/: conway.frag  conway.vert  default.frag  default.vert  random_tex.frag
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  GameOfLife.cpp  GameOfLife.h  QuadRenderer.cpp  QuadRenderer.h  Shader.cpp  Shader.h  main.cpp  util.cpp  util.h
